added a new css file globalvariables

--- a/css/global-variables.css
+++ b/css/global-variables.css
@@ -1,25 +1,25 @@
-:root { 
-    --color-vivid-pink: #e20665;    
-    /* --color-dark-blue: #041484; */
-    --color-dark-blue: #1d1283;
-    --color-black-olive: #3d3d3d;
-    --color-carmine : #a10829;
-    --color-darkest-blue:#030c4c;
-    --color-dark-grey:#777;
-    --color-soft-magenta:#f5c4f1;
-    --color-white:white;
-    /* --color-black:#090708; */
-    --color-black:rgb(9,7,8);
-    --color-soft-pink:#ed579c;
-    --color-grey:#bdbdbd;
-    --color-lime-green:#43a047;
-    --color-soft-yellow:#e9c968;
-    --color-greyish-blue:#b0bec5;
-    --color-darkest-grey:#666;
-    --color-very-pale-blue:#edf2ff;
-    --color-vivid-green:#64dd17;
-    --color-cyan-lime-green:#00e676;
-    --color-firebrick:#b22222;
-    --success-color: darkgreen;
-    --error-color: red;
-  }
+:root {
+  --color-vivid-pink: #e20665;
+  /* --color-dark-blue: #041484; */
+  --color-dark-blue: #1d1283;
+  --color-black-olive: #3d3d3d;
+  --color-carmine: #a10829;
+  --color-darkest-blue: #030c4c;
+  --color-dark-grey: #777;
+  --color-soft-magenta: #f5c4f1;
+  --color-white: white;
+  /* --color-black:#090708; */
+  --color-black: rgb(9, 7, 8);
+  --color-soft-pink: #ed579c;
+  --color-grey: #bdbdbd;
+  --color-lime-green: #43a047;
+  --color-soft-yellow: #e9c968;
+  --color-greyish-blue: #b0bec5;
+  --color-darkest-grey: #666;
+  --color-very-pale-blue: #edf2ff;
+  --color-vivid-green: #64dd17;
+  --color-cyan-lime-green: #00e676;
+  --color-firebrick: #b22222;
+  --success-color: darkgreen;
+  --error-color: red;
+}
