--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@import url("global-variables.css");
+@import url('global-variables.css');
 html,
 body {
   font-family: 'Roboto', sans-serif;
@@ -55,19 +55,19 @@ body {
 }
 
 .highlighted-text {
-  color:var(--color-vivid-pink);
+  color: var(--color-vivid-pink);
 }
 
 .highlighted-text a {
-  color:var(--color-dark-blue);
+  color: var(--color-dark-blue);
 }
 
 .notif-banner {
   padding: 10px 20px;
-  border: 1px solid var(--color-grey);  /*black color can also work hare*/
+  border: 1px solid var(--color-grey); /*black color can also work hare*/
   border-radius: 10px;
   /* background-color: #fafafa; */
-  background-color: #fafafa ;  /* change it */
+  background-color: #fafafa; /* change it */
   margin: 20px 0 50px;
   display: inline-block;
 }
@@ -95,7 +95,11 @@ body {
 
 .notif-banner > .notif span,
 .notif-banner > .notif > .label-tag {
-  background: linear-gradient(90deg, var(--color-vivid-pink)25%, var(--color-soft-pink) 90%);
+  background: linear-gradient(
+    90deg,
+    var(--color-vivid-pink) 25%,
+    var(--color-soft-pink) 90%
+  );
   color: var(--color-white);
   padding: 2px 8px;
   font-weight: bold;
@@ -105,7 +109,11 @@ body {
 }
 
 .notif-banner > .notif > .label-tag.coming-soon {
-  background: linear-gradient(90deg, var(--color-lime-green)25%, var(--color-vivid-green) 90%);
+  background: linear-gradient(
+    90deg,
+    var(--color-lime-green) 25%,
+    var(--color-vivid-green) 90%
+  );
 }
 
 .notif-banner > .notif a {
