--- a/css/user-form.css
+++ b/css/user-form.css
@@ -1,4 +1,4 @@
-@import url("global-variables.css");
+@import url('global-variables.css');
 /* Define variables in the root scope */
 /* :root {
   --success-color: darkgreen;
@@ -24,7 +24,7 @@ body {
 .form-wrap {
   padding: 15px 25px;
   background: var(--color-white);
-  border: 1px solid var(--color-grey);  /*#f4f4f4*/
+  border: 1px solid var(--color-grey); /*#f4f4f4*/
   border-radius: 2%;
   box-shadow: 0 0 15px -7px rgba(0, 0, 0, 0.65);
 }
